--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,8 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+div[phx-feedback-for] {
+    max-width: none;
+    width: 100%;
+    margin-top: 0px;
+}
