Optimize frontend for enhanced UI/UX

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,7 +4,23 @@
 
 /* This file is for your main application CSS */
 div[phx-feedback-for] {
-    max-width: none;
-    width: 100%;
-    margin-top: 0px;
+  max-width: none;
+  width: 100%;
+  margin-top: 0px;
+}
+
+.original-url {
+  word-break: break-all;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.original-url-table {
+  word-break: break-all;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
