--- a/lib/shorter_web/controllers/url_html/new.html.heex
+++ b/lib/shorter_web/controllers/url_html/new.html.heex
@@ -1,4 +1,4 @@
-<div style="max-width:700px; margin: 100px auto;">
+<div style="max-width:700px; min-width:300px;  margin: 100px auto;">
   <h1 class="text-4xl font-bold text-center mb-8">Shorten your URLs</h1>
   <.form
     :let={f}
@@ -27,7 +27,7 @@
       </div>
     </div>
     <button
-      class="inline-flex items-center py-2.5 px-3 text-sm font-medium rounded-md text-white bg-blue-700 border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      class="w-full sm:w-auto inline-flex items-center py-2.5 px-3 mt-4 sm:mt-0 text-sm font-medium rounded-md text-white bg-blue-700 border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
       type="submit"
       phx-disable-with="Shortening..."
     >
@@ -37,10 +37,16 @@
 
   <%= if @slug do %>
     <div class="bg-slate-100	px-6 py-8 relative mt-7 sm:flex flex-col rounded-lg" role="alert">
-      <p class="text-xl font-bold ">
+      <a
+        target="_blank"
+        href={"#{Application.fetch_env!(:shorter, :base_url)}/#{@slug}"}
+        class="text-xl font-extrabold hover:underline decoration-solid "
+      >
         <%= "#{Application.fetch_env!(:shorter, :base_url)}/#{@slug}" %>
+      </a>
+      <p class="w-full overflow-hidden text-ellipsis mt-2 text-sm text-slate-500 original-url">
+        <%= @original_url %>
       </p>
-      <p class="mt-2 text-sm text-slate-500	"><%= @original_url %></p>
     </div>
   <% end %>
 </div>
