--- a/lib/shorter_web/controllers/stats_html/index.html.heex
+++ b/lib/shorter_web/controllers/stats_html/index.html.heex
@@ -1,5 +1,5 @@
 <div>
-<div class="flex flex-col items-center">
+<div class="flex flex-col items-center ">
   <h1 class="text-4xl font-bold my-8">URL Shortener Stats</h1>
   <div class="mb-8">
     <a
@@ -9,7 +9,7 @@
       Export as CSV
     </a>
   </div>
-  <div class="px-4  mx-auto" style="width: 90vw">
+  <div class="px-4 max-w-5xl mx-auto">
     <table class="shadow-lg rounded-lg w-full table-auto">
       <thead>
         <tr class="bg-gray-100">
