--- a/lib/shorter_web/components/layouts/app.html.heex
+++ b/lib/shorter_web/components/layouts/app.html.heex
@@ -9,12 +9,10 @@
       </p>
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
+      <a  target="_blank" href="https://github.com/jennie232/Shorter" class="hover:text-zinc-700">
         @jennieyoun
       </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
-      </a>
+  
 
     </div>
   </div>
