Add ENV for docker-compose.yml after editing entrypoint.sh along with some css/minor changes

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,6 +15,7 @@ div[phx-feedback-for] {
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .original-url-table {
